# TalkInput

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.en.md  README.md  README.zh.md  README_zh.md  benchmark-results.md  msvc.ps1  vcpkg.json
Src/: CMakeLists.txt  TalkInput_en.ts  TalkInput_zh.ts  app_config.cpp  app_config.h  archive_utils.cpp  asr_service.cpp  asr_service.h  asr_setting_widget.cpp  asr_setting_widget.h  asr_test.cpp  benchmark.cpp  funasr_nano_recognizer.cpp  history_widget.cpp  history_widget.h  json_utils.h  llm_post_processor.cpp  llm_post_processor.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  model_registry.cpp  model_registry.h  model_widget.cpp  model_widget.h  ocr_capture_test.cpp  ocr_recognition_test.cpp  ocr_service.cpp  ocr_service.h  ocr_service_windows.cpp  ocr_service_windows.h  online_speech_recognizer.cpp  online_speech_recognizer.h  paste_text.cpp  paste_text.h  qt_fmt.h  qt_sink.h  qwen3_asr_recognizer.cpp  recognition_history.cpp  (+14 more)
Src/Windows/: ocr_service_windows.cpp
Src/recognizers/: offline_speech_recognizer.cpp  offline_speech_recognizer.h  speech_recognizer.cpp  streaming_paraformer_recognizer.cpp
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/include/qcoro6/qcoro/: QCoro  QCoroAbstractSocket  QCoroAsyncGenerator  QCoroCore  QCoroFuture  QCoroFwd  QCoroGenerator  QCoroIODevice  QCoroLazyTask  QCoroLocalSocket  QCoroNetwork  QCoroNetworkReply  QCoroProcess  QCoroSignal  QCoroTask  QCoroTcpServer  QCoroThread  QCoroTimer  config.h  qcorocore_export.h  qcoronetwork_export.h  qcorotask.h
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/include/qcoro6/qcoro/impl/: lazytask.h  taskbase.h  taskpromise.h
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/lib/cmake/QCoro6/: QCoro6Config.cmake
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/lib/cmake/QCoro6Core/: QCoro6CoreConfig.cmake  QCoro6CoreTargets-release.cmake  QCoro6CoreTargets.cmake
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/lib/cmake/QCoro6Coro/: QCoro6CoroConfig.cmake  QCoro6CoroTargets.cmake
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/lib/cmake/QCoro6Network/: QCoro6NetworkConfig.cmake  QCoro6NetworkTargets-release.cmake  QCoro6NetworkTargets.cmake
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Devel/mkspecs/modules/: qt_QCoroCore.pri  qt_QCoroCoro.pri  qt_QCoroNetwork.pri
_CPack_Packages/win64/NSIS/TalkInput-0.2.0-win64/Runtime/translations/: qt_de.qm
cmake/: GitInfo.cmake  ModelDownload.cmake  QtDeploy.cmake  SherpaOnnxRelease.cmake  TesseractTrainData.cmake
resources/: app.qss  config.json  models.json  style.qss
resources/misc/: app.qss  app.rc  config.json
src/: CMakeLists.txt  TalkInput_en.ts  TalkInput_zh.ts  app_config.cpp  app_config.h  app_language.cpp  app_language.h  archive_utils.cpp  archive_utils.h  asr_config.cpp  asr_config.h  asr_service.cpp  asr_service.h  asr_setting_widget.cpp  asr_setting_widget.h  asr_setting_widget.ui  asr_test.cpp  audio_file_decoder.cpp  audio_file_decoder.h  audio_input_capture.cpp  audio_input_capture.h  audio_utils.cpp  audio_utils.h  clean_text.cpp  clean_text.h  history_widget.cpp  history_widget.h  history_widget.ui  json_utils.cpp  json_utils.h  llm_config.cpp  llm_config.h  llm_post_processor.cpp  llm_post_processor.h  log_panel.cpp  log_panel.h  logging.cpp  logging.h  main.cpp  main_window.cpp  (+48 more)
src/deprecated/: rapid_ocr_recognizer.h
src/linux/: llama_server_archive.cpp  native_overlay_effects.cpp  paste_text.cpp  platform_utils.cpp  system_ocr_recognizer.cpp  system_speech_recognizer.cpp  system_speech_support.cpp
src/macos/: llama_server_archive.cpp  native_overlay_effects.cpp  ocr_factory.cpp  ocr_service_system.cpp  paste_impl.cpp  paste_text.cpp  platform_utils.cpp  port_killer.cpp  system_ocr_recognizer.cpp  system_ocr_service.cpp  system_speech_recognizer.cpp
src/recognizers/: funasr_nano_recognizer.h  funasr_nano_speech_recognizer.cpp  funasr_nano_speech_recognizer.h  offline_speech_recognizer.cpp  offline_speech_recognizer.h  online_speech_recognizer.cpp  online_speech_recognizer.h  qwen3_asr_recognizer.h  qwen3_asr_speech_recognizer.cpp  qwen3_asr_speech_recognizer.h  sense_voice_recognizer.cpp  sense_voice_speech_recognizer.cpp  sense_voice_speech_recognizer.h  speech_recognizer.cpp  streaming_paraformer_recognizer.h  streaming_paraformer_speech_recognizer.cpp  streaming_paraformer_speech_recognizer.h  streaming_transducer_speech_recognizer.cpp  streaming_transducer_speech_recognizer.h
src/scripts/: rapidocr_cli.py
src/tests/: CMakeLists.txt  benchmark.cpp  ocr_capture_test.cpp  ocr_recognition_test.cpp  segment_test.cpp  sense_voice_test.cpp  system_speech_test.cpp  winrt_speech_test.cpp
src/windows/: llama_server_archive.cpp  native_overlay_effects.cpp  ocr_factory.cpp  ocr_service_system.cpp  paste_impl.cpp  paste_text.cpp  platform_utils.cpp  port_killer.cpp  system_ocr_recognizer.cpp  system_ocr_service.cpp  system_speech_recognizer.cpp  system_speech_support.cpp
third_parties/KDToolBox/: qt_fmt.h
